--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,8 +79,7 @@ body {
     font-size: 1rem;
     font-weight: 500;
     text-align: center;
-    list-style: none;
-
+    text-decoration: none;
 }
 
 .txt-card-info-1{
@@ -176,6 +175,8 @@ img{
     display:none;
     width: auto;
     padding: 0.5rem 0.25rem 0.5rem 0.25rem;
+    list-style: none;
+    text-align: center;
 }
 
 .menu-icon{
@@ -628,6 +629,3 @@ img{
 
 }
 
-
-
-}
