Avance 06: Estructura Html y CSS final

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,27 @@ body {
     text-align: start;
 }
 
+.txt-front-title-1{
+    color:#252525;
+    font-size: 2.5rem;
+    font-weight: 500;
+    text-align: start;
+}
+
+.txt-front-title-2{
+    color: #252525;
+    font-size: 2.5rem;
+    font-weight: 700;
+    text-align: start;
+}
+
+.txt-front{
+    color: dimgray;
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: justify;
+}
+
 .txt-subtitle-1{
     color:dimgray;
     font-size: 0.9rem;
@@ -194,8 +215,6 @@ img{
     align-items: center;
 }
 
-
-
 .form{
     width: 100%;
     display: flex;
@@ -252,7 +271,6 @@ img{
     border-radius: 0.2rem;
 }
 
-
 /* Estilos Main*/
 .main{
     background-color: white;
@@ -262,6 +280,78 @@ img{
     justify-content: space-between;
     align-items: center;
 }
+
+.front{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+.front-logo{
+    width: 100%;
+    height: 8rem;
+    background-image: url(../imgs/front-img.jpg);
+    background-position-y: 40%;
+    background-repeat: none;
+    background-size: auto;
+    background-blend-mode: luminosity;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: lightgray;
+}
+
+.front-logo-img{
+    height: 5rem;
+    width: 5rem;
+}
+
+.front-info{
+    width: 100%;
+    height: auto;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    overflow: auto;
+}
+
+.form-contact{
+    width: 100%;
+    height: auto;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: start;
+}
+
+.box-data-1{
+    width: 99%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: dimgray;
+    border-radius: 0.2rem;
+}
+
+.box-data-2{
+    width: 99%;
+    height: 20rem;
+    border-style: solid;
+    border-width: 1px;
+    border-color: dimgray;
+    border-radius: 0.2rem;    
+    text-overflow:ellipsis;
+}
+
+
 
 .container-grid{
     height: 100%;
